--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.profiles.active=dev
+
+## create an application-dev.properties file in the resources directory and
+##  Copy all of the lines after this comment and uncomment in the other file
+
+#spring.datasource.url=jdbc:postgresql://localhost:5520/pgBD-api
+#spring.datasource.username=docker
+#spring.datasource.password=docker
+#spring.jpa.show-sql=true
+#
+### Hibernate Properties
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+#spring.jpa.hibernate.ddl-auto = update
 
