--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5520/pgBD-api
+spring.datasource.url=jdbc:postgresql://localhost:5520/bd-api
 spring.datasource.username=docker
 spring.datasource.password=docker
 spring.jpa.show-sql=true
